PDP:description overflow fixed

--- a/src/sass/PDP/_descriptionCard.scss
+++ b/src/sass/PDP/_descriptionCard.scss
@@ -57,10 +57,10 @@
 	}
 
 	&__description {
-		display: -webkit-box;
-		-webkit-line-clamp: 3;
-		-webkit-box-orient: vertical;
-		overflow: hidden;
+		// display: -webkit-box;
+		// -webkit-line-clamp: 6;
+		// -webkit-box-orient: vertical;
+		// overflow: hidden;
 		cursor: pointer;
 	}
 }
